# spoton

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  TROUBLESHOOTING.md  repo.xml
.claude/skills/spoton-release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/forum-monitor/: context.js  drafter.js  filter.js  forum-state.json  forum-topics.json  index.js  package-lock.json  package.json  scraper.js  state.js
.github/workflows/: build-librespot.yml  forum-monitor.yml  perl-tests.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.1-MILESTONE-AUDIT.md
.planning/debug/: connect-history-replay.md  connect-reconnect-no-audio.md  liked-songs-play-all-throttle.md  sync-group-audio.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v2.0-ROADMAP.md
.planning/phases/01-plugin-skeleton-binary-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-auth-api-foundation/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02.1-oauth-pkce-browser-auth/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  02.1-04-PLAN.md  02.1-04-SUMMARY.md  02.1-CONTEXT.md  02.1-DISCUSSION-LOG.md  02.1-HUMAN-UAT.md  02.1-PATTERNS.md  02.1-RESEARCH.md  02.1-REVIEW.md  02.1-UI-SPEC.md  02.1-VALIDATION.md  02.1-VERIFICATION.md
.planning/phases/03-browse-navigation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-single-track-streaming/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-PATTERNS.md  04-RESEARCH.md  04-REVIEW-FIX.md  04-REVIEW.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/04.1-streaming-bug-fixes-passthrough-binary/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-RESEARCH.md  04.1-REVIEW-FIX.md  04.1-REVIEW.md  04.1-UAT.md  04.1-VERIFICATION.md
.planning/phases/04.2-credentials-made-for-you-fix/: 04.2-01-PLAN.md  04.2-01-SUMMARY.md  04.2-02-PLAN.md  04.2-02-SUMMARY.md  04.2-CONTEXT.md  04.2-HUMAN-UAT.md  04.2-PATTERNS.md  04.2-RESEARCH.md  04.2-REVIEW-FIX.md  04.2-UAT.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/specs/: session-health-SPEC.md
Plugins/SpotOn/: Connect.pm  DontStopTheMusic.pm  Helper.pm  Plugin.pm  ProtocolHandler.pm  Settings.pm  Status.pm  custom-convert.conf  custom-types.conf  install.xml  strings.txt
librespot-spoton/: Cargo.toml  Cross.toml
librespot-spoton/.cargo/: config.toml
librespot-spoton/librespot-discovery-patched/: Cargo.toml
librespot-spoton/librespot-discovery-patched/src/: lib.rs  server.rs
librespot-spoton/src/: browse.rs  connect.rs  main.rs  unified.rs
t/: 01_install_xml.t  02_strings.t  03_convert_conf.t  04_types_conf.t  05_perl_syntax.t  06_binary_check.t  07_token_manager.t  08_api_client.t  09_settings.t  10_pkce_callback.t  10_stream_metadata.t  11_track_history.t  12_protocol_rename.t  13_status_page.t  14_context_menu.t  15_streaming_mode.t
(+323 files in other folders)
