[package]
name = "spoton"
version = "1.1.0"
edition = "2021"
authors = ["SpotOn Contributors"]
description = "SpotOn librespot integration binary for LMS"
license = "MIT"

[features]
# Mirror the librespot-playback passthrough-decoder feature for --check capability reporting.
# When building without passthrough, omit this feature to make --check report false.
passthrough-decoder = []
default = ["passthrough-decoder"]

[[bin]]
name = "spoton"
path = "src/main.rs"

[dependencies]
librespot-core      = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-connect   = { version = "0.8", default-features = false, features = ["rustls-tls-native-roots"] }
librespot-discovery = { version = "0.8", default-features = false, features = ["with-libmdns", "rustls-tls-native-roots"] }
librespot-playback  = { version = "0.8", default-features = false, features = ["passthrough-decoder", "rustls-tls-native-roots"] }
serde_json     = "1"
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
futures-util   = "0.3"
bytes          = "1"
hyper          = { version = "1", features = ["http1", "server"] }
hyper-util     = { version = "0.1", features = ["server-auto", "server-graceful", "service", "tokio"] }
http-body-util = "0.1"
tokio-stream   = "0.1"
log            = "0.4"
env_logger     = "0.11"
